# Schleusenbemessung

./: .gitignore  Cargo.toml  DurchflussKammerwasserspiegel.plt  dimenplot.plt  durchflussplot.tex  events.csv  inter.csv  inter.plt  inter.tex  inter_max.csv  inter_min.csv  min.csv  min.plt  multiplot.plt  result.csv  result0.csv  t.csv  test.toml
src/: main.rs
src/bruteforce/: mod.rs
src/hydraulic/: mod.rs
