[package]
name = "Kammerwasserspiegel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2 # Bischen Länger warten.

[dependencies]
log = "0.4.17"
log4rs = {version = "1.1.1", features = ["file_appender"]}
toml = "0.5.9"
serde = {version = "1.0.143", features = ["derive"]}
